@@ -64,19 +64,16 @@ AVRTEST_OPT (stdout, 1, stdout)
 // Verbosity about avrtest internals
 AVRTEST_OPT (v, 0, verbose)
 
-
-/* All of the following options are silently ignored by avrtest
-   and behave as if disabled, i.e. specified as -no-...  */
-
 // -args ... All command args after -args are passed to the target
 // program resp. ignored with -no-args ...
 AVRTEST_OPT (args, 0, args)
 
+
+/* All of the following options are silently ignored by avrtest
+   and behave as if disabled, i.e. specified as -no-...  */
+
 // Whether logging is on active at program start
 AVRTEST_OPT (log, 1, log)
-
-// Whether TICKS_PORT is active
-AVRTEST_OPT (ticks, 1, ticks)
 
 // Whether to read and display symbol names from ELF
 AVRTEST_OPT (syms, 1, symbols)
